tests/golden/err-tab-indent/expected_error.txt
error: インデントにタブは使えません
 --> ./_.clum:2:1
  |
2 | 	y = 2
  | ^
